package com.example.android.botify.menu.sub.audio

import android.net.Uri
import java.text.FieldPosition

interface AudioListener {
    fun onAudioClickListener(position: Int)
}