package com.example.android.botify.menu.sub.image

import androidx.annotation.DrawableRes

class Image(
    val id: Long,
    @DrawableRes
    val image: Int?,
    val name: String
)