package com.example.android.botify.menu.sub.image

interface ImageListener {
    fun onImageClickListener(image: Image)
}